tests/bad/named_arguments.glaz
fn x(a: i32) {}

fn main() {
  x(a=10, b=1);
}
